stream 문법 수정